--- a/MvcEntityFramework/Views/Shared/_Layout.cshtml
+++ b/MvcEntityFramework/Views/Shared/_Layout.cshtml
@@ -38,13 +38,16 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ejemplos</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" 
+                        <a class="dropdown-item"
+                           asp-controller="Empleados"
+                           asp-action="Index">Empleados EF</a>
+                        <a class="dropdown-item"
                            asp-action="Index" asp-controller="Departamentos">Departamentos</a>
-                        <a class="dropdown-item" 
+                        <a class="dropdown-item"
                            asp-action="Index" asp-controller="Hospital">
                             Hospitales EF
                         </a>
-                        <a class="dropdown-item" 
+                        <a class="dropdown-item"
                            asp-controller="Enfermos"
                            asp-action="Index">Enfermos EF</a>
                     </div>
