--- a/MvcEntityFramework/Views/Shared/_Layout.cshtml
+++ b/MvcEntityFramework/Views/Shared/_Layout.cshtml
@@ -44,6 +44,10 @@
                         <a class="dropdown-item"
                            asp-action="Index" asp-controller="Departamentos">Departamentos</a>
                         <a class="dropdown-item"
+                           asp-action="Index" asp-controller="Doctores">
+                            Doctores EF
+                        </a>
+                        <a class="dropdown-item"
                            asp-action="Index" asp-controller="Hospital">
                             Hospitales EF
                         </a>
