--- a/MvcEntityFramework/Views/Shared/_Layout.cshtml
+++ b/MvcEntityFramework/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ejemplos</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                         <a class="dropdown-item"
+                           asp-controller="EmpleadosHospital"
+                           asp-action="Index">Vista Empleados EF</a>
+                        <a class="dropdown-item"
                            asp-controller="Empleados"
                            asp-action="Index">Empleados EF</a>
                         <a class="dropdown-item"
